# localfinder

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
localfinder/: __main__.py  pipeline.py  utils.py
localfinder/commands/: bin.py  calc.py  findreg.py  viz.py
tests/scripts/: 0_change_bedgraph_into_tdf_for_igv_visualization.sh  0_prepare_chrom_sizes_for_some_reference_genome.sh  download_test_data.sh  test_CTCF_ChIP-seq_data_from_Cell2017_step_by_step.sh  test_CTCF_ChIP-seq_data_from_Cell2017_using_pipeline.sh  test_ChIP-seq_data_from_NG2011_using_pipeline.sh  test_data_chr20_step_by_step.sh  test_data_chr20_using_pipeline.sh
tests/test_ChIP-seq_data_from_NG2011/: m3134-DEX-ChIP_allCombined.100.bw  m3134-pDEX-ChIP_allCombined.100.bw
tests/test_data_chr20/: track1_chr20.bedgraph  track1_chr20.bedgraph.zst  track2_chr20.bedgraph  track2_chr20.bedgraph.zst
tests/tools_bigWigToBedGraph_forARM/: install_bigWigToBedGraph_forARM64.sh
