[project]
name = "localfinder"
version = "0.2.0"
description = "localfinder - calculate weighted local correlation (hmC) and enrichment significance (ES) between two genomic tracks, optionally discover significantly different regions(SDRs), and visualise results"
readme = "README.md"
license = "MIT"
authors = [{ name = "Pengfei Yin", email = "12133074@mail.sustech.edu.cn" }]
requires-python = ">=3.9"

dependencies = [
  "plotly>=6.3.0",
  "pygenometracks>=3.9",
  "scikit-learn>=1.6.1",
  "statsmodels>=0.14.5",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
localfinder = "localfinder.__main__:main"

[project.urls]
repository = "https://github.com/astudentfromsustech/localfinder"
issues = "https://github.com/astudentfromsustech/localfinder/issues"

[tool.setuptools]
packages = ["localfinder"]

[dependency-groups]
dev = ["ipython>=8.18.1"]

[tool.mypy]
disable_error_code = ["import-not-found"]

[tool.ruff]
line-length = 99
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
